<resources>
    <string name="app_name">SoftwareDesign-Note</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="editor_frg__title">Input tittle of note</string>

    <string name="dialog_frg__sure">Are you sure?</string>
    <string name="dialog_frg__attention">You will not be able to restore the note</string>
    <string name="dialog_frg__app_close">Are you want to close app?</string>
    <string name="auth_frg__login_ic">Auth frg icon user</string>
    <string name="auth_frg__login">Input your email</string>
    <string name="auth_frg__password">Input your password</string>
    <string name="reg_frg__login_ic">Registration login</string>
    <string name="reg_frg__input_password_again">Input password again</string>
</resources>