<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDeepDark"
    tools:context=".main.EditorFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_large_24"
        app:layout_constraintBottom_toTopOf="@+id/reg_frg__login_wr"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/slightly_large_icon_25"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/reg_frg__login_wr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_big_30"
        android:background="@drawable/auth_frg__input_rounded"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_half_big_15"
        android:paddingTop="@dimen/spacing_half_big_15"
        android:paddingBottom="@dimen/spacing_half_big_15"
        app:layout_constraintBottom_toTopOf="@+id/reg_frg__password_wr"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing_big_30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/reg_frg__login_ic"
            android:layout_width="@dimen/spacing_mid_20"
            android:layout_height="@dimen/spacing_mid_20"
            android:layout_marginEnd="@dimen/spacing_half_big_15"
            android:contentDescription="@string/reg_frg__login_ic"
            android:src="@drawable/auth_frg__login_ic" />

        <EditText
            android:id="@+id/reg_frg__login_tv"
            style="@style/Text.ManualInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_frg__login"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_frg__password_wr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_big_30"
        android:background="@drawable/auth_frg__input_rounded"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing_big_30"
        android:paddingStart="@dimen/spacing_half_big_15"
        android:paddingTop="@dimen/spacing_half_big_15"
        android:paddingBottom="@dimen/spacing_half_big_15"
        app:layout_constraintBottom_toTopOf="@+id/reg_frg__password_confirm_wr"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/auth_frg__password_ic"
            android:layout_width="@dimen/spacing_mid_20"
            android:layout_height="@dimen/spacing_mid_20"
            android:layout_marginEnd="@dimen/spacing_half_big_15"
            android:contentDescription="@string/auth_frg__login_ic"
            android:src="@drawable/auth_frg__password_ic" />

        <EditText
            android:id="@+id/reg_frg__password_et"
            style="@style/Text.ManualInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_frg__password"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reg_frg__password_confirm_wr"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/spacing_double_big_60"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_big_30"
        android:background="@drawable/auth_frg__input_rounded"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_half_big_15"
        android:paddingTop="@dimen/spacing_half_big_15"
        android:paddingBottom="@dimen/spacing_half_big_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/reg_frg__password_confirm_ic"
            android:layout_width="@dimen/spacing_mid_20"
            android:layout_height="@dimen/spacing_mid_20"
            android:layout_marginEnd="@dimen/spacing_half_big_15"
            android:contentDescription="@string/auth_frg__login_ic"
            android:src="@drawable/auth_frg__password_ic" />

        <EditText
            android:id="@+id/reg_frg__password_confirm_et"
            style="@style/Text.ManualInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_frg__input_password_again"
            android:inputType="textPassword" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reg_frg__signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_double_big_60"
        android:layout_marginTop="@dimen/spacing_huge_40"
        android:background="@drawable/auth_frg__btn_sign_in"
        android:padding="@dimen/spacing_double_tiny_8"
        android:text="submit"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_frg__password_confirm_wr" />


</androidx.constraintlayout.widget.ConstraintLayout>